[package]
name = "fuse"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
azure_identity = { version = "0.26.0" }
azure_core = { version = "0.26.0" }
azure_storage_blob = { version = "0.3.0" }
clap = { version = "4.5.41", features = ["derive"] }
env_logger = "0.11.8"
fuser = "0.15.1"
futures = "0.3"
libc = "0.2.174"
log = "0.4.27"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
essi-ffmpeg = "0.3.0"
ctrlc = "3.4.7"
